# jukebox_pi_party

./: .gitignore  Cargo.toml  music.db
.cache/: 1N26te5iEKM.m4a  8Jnrkw2Lzuw.m4a  F-6s5ZhI5GQ.m4a  SKBaxsF6PJE.m4a  ny3qvC5msVo.m4a  rh6agFmfyhI.m4a  va1Ue-FQw7I.m4a  wsFtlVyj5LU.m4a  xMrUZLcf0nk.m4a
MetadataServices/: hub.py  requirements.txt  test.py
MetadataServices/services/: youtube_service.py
front/: package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.jsx  config.js
front/src/components/: Busqueda.jsx  Main.jsx  PlayerBar.jsx  Playlist.jsx  Sidebar.jsx  Tcard.jsx  busquedaM.jsx  fondo.jsx
front/src/hooks/: usePlay.js  useSearch.js
front/src/mocks/: track.js
front/src/utils/: formatters.js
migrations/: 20240304000000_initial.sql
src/: main.rs  player_cmd.rs  tui.rs  web.rs
src/audio/: decoder.rs  engine.rs  mod.rs
src/managers/: mod.rs  queue_manager.rs  track_manager.rs
src/model/: dowload_track.rs  metadata_response.rs  mod.rs  playable_track.rs  request.rs  search_response.rs  track.rs
src/repository/: mod.rs  track_repository.rs
src/services/: download.rs  init_metadata_services.rs  metadata.rs  mod.rs
